# Backend/src/models/reportModel.ts
@@ -21,7 +21,12 @@ const ReportSchema: Schema<IReport> = new mongoose.Schema({
         coordinates: {
             type: [Number],
             required: true,
-            length: 2
+            validate: {
+                validator: function (value: number[]) {
+                    return value.length === 2;
+                },
+                message: 'Coordinates must have exactly two elements',
+            },
         }
     },
     images: [
